[gd_scene load_steps=13 format=2]

[ext_resource path="res://Script/UI/ChessPanel1.gd" type="Script" id=1]
[ext_resource path="res://UI/CommonUI/CommonPureColorBG1.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/CommonUI/CommonLabel.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/CommonUI/CommonPureColorBG2.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/CommonUI/CommonDiceLabel36.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/CommonUI/CommonLabel10.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/CommonUI/TitleLabel20.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scene/Water/SuanLaTang.tscn" type="PackedScene" id=8]
[ext_resource path="res://UI/CommonUI/CommonButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://UI/CommonUI/CommonLabel8.tscn" type="PackedScene" id=10]
[ext_resource path="res://UI/CommonUI/CommonBlurBG.tscn" type="PackedScene" id=11]

[sub_resource type="Animation" id=1]
resource_name = "ShowResult"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("commonButtonContinue:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("controlResult:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("commonButtonContinue:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("controlResult:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "SetAnimationPlayer1_IsEndTrue"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("commonLabel8Continue:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("commonLabel8Continue:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 1, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="ChessPanel1" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="colorRect1" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0117647, 0.0196078, 0.00784314, 0.14902 )
__meta__ = {
"_edit_lock_": true
}

[node name="commonBlurBG1" parent="." instance=ExtResource( 11 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -199.0
margin_right = 400.0
margin_bottom = 199.0

[node name="commonPureColorBG1A" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.0
margin_top = -68.0
margin_right = 68.0
margin_bottom = 68.0

[node name="commonPureColorBG2A" parent="." instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -116.0
margin_right = 20.0
margin_bottom = -76.0

[node name="commonLabelTargetNumber" parent="." instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -107.0
margin_right = 20.0
margin_bottom = -84.0
text = "999"
align = 1

[node name="commonPureColorBG2B" parent="." instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -79.0
margin_right = 60.0
margin_bottom = -64.0

[node name="commonLabel10TargetName" parent="." instance=ExtResource( 6 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -79.5
margin_right = 60.0
margin_bottom = -64.5
grow_horizontal = 2
text = "Target Name"
align = 1

[node name="control1" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_lock_": true
}

[node name="colorRect1" type="ColorRect" parent="control1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -48.0
margin_right = 48.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 96, 96 )
__meta__ = {
"_edit_lock_": true
}

[node name="commonDiceLabel36A" parent="control1" instance=ExtResource( 5 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -22.5
margin_right = 48.0
margin_bottom = 22.5
text = "666"
align = 1

[node name="controlResult" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_lock_": true
}

[node name="suanLaTang1" parent="controlResult" instance=ExtResource( 8 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.0
margin_top = 63.5
margin_right = 136.0
margin_bottom = 108.5
isCircle = false
tileSize = Vector2( 60, 60 )
offsetFactor = Vector2( 20, 20 )

[node name="titleLabel20Result" parent="controlResult" instance=ExtResource( 7 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.0
margin_top = 71.5
margin_right = 136.0
margin_bottom = 100.5
text = "Result"
align = 1

[node name="commonButtonContinue" parent="." instance=ExtResource( 9 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -108.5
margin_top = 127.5
margin_right = 108.5
margin_bottom = 156.5
text = "Continue"

[node name="commonLabel8Continue" parent="." instance=ExtResource( 10 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -108.5
margin_top = 156.5
margin_right = 108.5
margin_bottom = 168.5
text = "Continue"
align = 2

[node name="animationPlayer1" type="AnimationPlayer" parent="."]
anims/ShowResult = SubResource( 1 )

[connection signal="pressed" from="commonButtonContinue" to="." method="_on_commonButtonContinue_pressed"]
